# zmartify-irrigation

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODING_STANDARDS.md  MIGRATION.md  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: host-tests.yml
build-relay-test/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args.in  cmake_install.cmake  config.env  flash_app_args  flash_args  flash_args.in  flasher_args.json  flasher_args.json.in  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  otadata-flash_args  project_description.json  x509_crt_bundle.S
build-relay-test/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build-relay-test/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-relay-test/esp-idf/: cmake_install.cmake
build-relay-test/gdbinit/: gdbinit  symbols
build-relay-test/log/: idf_py_stderr_output_35921  idf_py_stdout_output_35921  idf_py_stdout_output_36637
build-relay-test/toolchain/: cflags  cxxflags
components/alarm_manager/: CMakeLists.txt
components/config_manager/: CMakeLists.txt  idf_component.yml
components/diagnostics_manager/: CMakeLists.txt  idf_component.yml
components/et_engine/: CMakeLists.txt
components/event_bus/: CMakeLists.txt  idf_component.yml
components/flow_manager/: CMakeLists.txt
components/hmi_board/: CMakeLists.txt  Kconfig  idf_component.yml
components/hmi_board/include/: hmi_7b_bus.h  hmi_7b_ioexp.h  hmi_7b_rgb.h  hmi_7b_touch.h  hmi_board.h  hmi_controller.h
components/hmi_board/src/: hmi_7b_bus.c  hmi_7b_ioexp.c  hmi_7b_rgb.c  hmi_7b_touch.c  hmi_board.c  hmi_controller.c  hmi_lvgl_port.c  hmi_touch.c
components/irrigation_engine/: CMakeLists.txt
components/mqtt_manager/: CMakeLists.txt
components/mqtt_manager/include/: mqtt_manager.h  mqtt_topic.h
components/mqtt_manager/src/: mqtt_manager.c  mqtt_topic.c
components/mqtt_transport/: CMakeLists.txt
components/ota_manager/: CMakeLists.txt
components/persistent_store/: CMakeLists.txt
components/pressure_manager/: CMakeLists.txt
components/relay_manager/: CMakeLists.txt  idf_component.yml
components/storage_manager/: CMakeLists.txt
components/valve_diagnostics/: CMakeLists.txt
components/zic_hal/: CMakeLists.txt  idf_component.yml
components/zic_hal/include/: hal.h  hal_flow.h  hal_gpio.h  hal_i2c.h  hal_pressure.h  hal_relay.h  hal_storage.h  hal_time.h
components/zic_hal/src/: hal.c  hal_flow.c  hal_gpio.c  hal_i2c.c  hal_pressure.c  hal_relay.c  hal_storage.c  hal_time.c
doc/: Zmartify_Documentation_Package_v3_0.md
docs/: ARCHITECTURE-v5.1-WATERSENSOR-ADDENDUM.md  CONFIG-ALARM-LIFECYCLE.md  DEVELOPMENT-PLAN-v5.0.md  DISPLAY_CONTINUATION_HANDOFF.md  DISPLAY_SETTINGS_RECOMMENDATIONS.md  FAT-PROCEDURE.md  FLOW-MANAGER-v5.1-WATERSENSOR-ADDENDUM.md  HARDWARE-7B.md  HMI-WORKFLOWS.md  IMPLEMENTATION-PLAN-2.md  MQTT-V5-CONTRACT.md  OPERATIONAL-LOGGING.md  OTA-SECURITY-PROVISIONING.md  RELEASE-AND-ROLLBACK.md  REQUIREMENTS-TRACEABILITY-v5.0.md  SAT-PROCEDURE.md  WATERSENSOR-INTEGRATION.md  WEATHER-ET.md  Zmartify-Irrigation-Full-Wiring-Diagram.md  implementation-plan.md  mqtt-command-interface.md
examples/16_LVGL_UI/main/: CMakeLists.txt  idf_component.yml  main.c
examples/16_LVGL_UI/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
examples/16_LVGL_UI/main/ui/components/: ui_comp_hook.c
examples/16_LVGL_UI/main/ui/fonts/: ui_font_Chinese_Font.c
examples/16_LVGL_UI/main/ui/images/: ui_img_485_png.c  ui_img_can_png.c  ui_img_eye_png.c  ui_img_ok_png.c  ui_img_pwm_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_4_png.c  ui_img_wifi_png.c
examples/16_LVGL_UI/main/ui/screens/: ui_Create_Uesr.c  ui_Login.c  ui_Main.c  ui_Main_CAN.c  ui_Main_PWM.c  ui_Main_RS485.c  ui_Main_WIFI.c
examples/16_LVGL_UI/main/user/add_password/: add_password.c  add_password.h
examples/16_LVGL_UI/main/user/can/: can.c  can.h
examples/16_LVGL_UI/main/user/pwm/: pwm.c  pwm.h
examples/16_LVGL_UI/main/user/rs485/: rs485.c  rs485.h
examples/16_LVGL_UI/main/user/sd_card/: sd_card.c  sd_card.h
examples/16_LVGL_UI/main/user/wifi/: wifi.c  wifi.h  wifi_ap.c  wifi_scan.c  wifi_sta.c
main/: CMakeLists.txt  idf_component.yml  main.c  version.h
release/: open-deviations.tsv
scripts/: build.sh  configure-wifi.sh  flash.sh  monitor.sh  ota-direct.sh  ota_upload.sh  release-gate.sh  setup-ota-signing-key.sh  size-report.sh  test-relays.sh
test/: 16 Channel IO Expansion Module with I2C Interface, MCP23017 Chip, 100 KHz High Speed, 66 x 18 mm, 5 V_3.3 V Compatible _ Amazon.de_ Business, Industry & Science.html  CMakeLists.txt  README.md  test_acceptance_safety_shutdown.c  test_alarm_lifecycle.c  test_config_validation.c  test_diagnostics_policy.c  test_et_engine.c  test_hmi_controller.c  test_irrigation_engine.c  test_mqtt_broker_contract.sh  test_mqtt_v2_contract.c  test_ota_policy.c  test_release_gate.sh  test_safety_rules.c  test_state_machine.c  test_storage_manager.c  test_valve_diagnostics.c  test_watersensor_protocol.c  test_weather_manager.c
test/16 Channel IO Expansion Module with I2C Interface, MCP23017 Chip, 100 KHz High Speed, 66 x 18 mm, 5 V_3.3 V Compatible _ Amazon.de_ Business, Industry & Science_files/: 01Se+xrOckL.js  111L3Nr1ZGL.css  113LOgpjcvL.js  11RQnVDQfcL.js  11Y0uhorYIL.js  11m16uzbS8L.js  196VXutB$7AsoOw.js  21FFTeImlwL.js  21riOzhfKxL.css  31Q7oxx+ycL.css  31dZuqFW8UL.css  31da309R+5L.js  3e6DvYcTDe-qWM5.js  41GNkynf1gL.js  41KYdktXP-L.js  41XvsNVE1tL.js  517ihKLgMvL.js  51JOy31t1vL.js  51Jh1KrXe4L.js  51N7hzAeoqL.js  61lPSt9B7KL.css  91iVopbMxHL.js  A1cgXhpC8pL.js  AwBgSoSPgfwxUqk.js  JvlFA9Rtaxk10SV.js  OLg_xR2a_RxdZZu(1).html  OLg_xR2a_RxdZZu.html  OVfda4WCDsY6YkZ.js  cGDlkL1IN5nsQ8p.js  edYzUqREVeIK6gU.js  iu3.html  k4kaFGsr2YW4epM.js  osTrsPx2u0GRh6h.js
(+357 files in other folders)
